# PathTracer

./: .clang-format  .gitattributes  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Shaders/: BaseColorDebug.slang  Blit.slang  ImGui.slang  Scene.slang  VBuffer.slang
Source/: Application.cpp  Application.h  Camera.h  PipelineCache.h  Program.h  RenderPipeline.h  Renderer.cpp  Renderer.h  Resources.h  Scene.cpp  Scene.h  ShaderVar.h  main.cpp
Source/Core/: PipelineCache.h  Program.cpp  Program.h  ShaderVar.h
Source/RenderGraph/: RenderGraph.cpp  RenderGraph.h  RenderPass.h  ResourceDesc.h
Source/RenderPasses/: BaseColorDebugPass.cpp  BaseColorDebugPass.h  BlitPass.cpp  BlitPass.h  GBufferUtils.slang  IRenderPass.h  ImGuiPass.cpp  ImGuiPass.h  VBufferPass.cpp  VBufferPass.h
Source/RenderPasses/Forward/: Forward.slang  ForwardPass.cpp  ForwardPass.h
Source/RenderPasses/GBufferRT/: GBufferRT.slang  GBufferRTPass.cpp  GBufferRTPass.h
Source/RenderPasses/GBufferRaster/: GBufferRaster.slang  GBufferRasterPass.cpp  GBufferRasterPass.h
Source/RenderPasses/PathTracer/: PathTracer.slang  PathTracerPass.cpp  PathTracerPass.h
Source/RenderPasses/VBufferRT/: VBufferRT.slang  VBufferRTPass.cpp  VBufferRTPass.h
Source/RenderPasses/VBufferRaster/: VBufferRaster.slang  VBufferRasterPass.cpp  VBufferRasterPass.h
Source/Renderer/: Camera.h  Camera.slang  Gui.cpp  Gui.h  Renderer.cpp  Renderer.h  Resources.h
Source/Scene/: BSDF.slang  EnvMap.slang  Light.slang  Scene.cpp  Scene.h  Scene.slang  ShadingData.slang
Source/Utils/: Constants.slang  Sampling.slang
